# PBMA_Manager

./: 1.0.0  next.config.mjs  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: layout.tsx  metadata.ts  page.tsx
src/libs/: sidApi.ts
